# ytstream-rs

./: Cargo.toml
src/: client_type.rs  error.rs  lib.rs  youtube_client.rs  ytstream.rs
src/request_data/: mod.rs
src/response_data/: captions.rs  microformat.rs  mod.rs  playability_status.rs  streaming_data.rs  video_details.rs
src/serde_impl/: mime_type.rs  mod.rs  naive_date.rs
src/stream/: mod.rs
src/video_data/: mod.rs  stream.rs
tests/: extract.rs
