[package]
name = "ytstream-rs"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "Cargo.toml"]

[workspace]
members = ["."]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["cookies", "json"] }
url = { version = "2.5.0", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive", "alloc"] }
serde_json = "1.0.111"
serde_with = { version = "3.5.1", features = ["json"] }
serde_qs = "0.12.0"
bytes = "1.5.0"
tokio-test = "0.4.3"
chrono = "0.4.33"
mime = "0.3.17"
once_cell = "1.19.0"
regex = { version = "1.10.3", features = [] }